add customer section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,60 @@
             </div>
         </div>
         <!-- End of section one -->
+         <!-- section two -->
+        <div class="section-2">
+            <h1 class="section2-heading">Customers</h1>
+
+            <div class="customers-wrapper">
+
+                <div class="customer">
+                    <i class="fas fa-quote-left"></i>
+                    <p class="customer-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nihil sunt nulla nostrum perferendis pariatur assumenda reprehenderit praesentium consequatur. Esse deleniti culpa quibusdam error est.
+                    </p>
+                    <div class="customer-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <img src="imgs/customer-img-1.jpg" alt="">
+                    <h4 class="customer-name">Daniella Adams</h4>
+                </div>
+                <div class="customer">
+                    <i class="fas fa-quote-left"></i>
+                    <p class="customer-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nihil sunt nulla nostrum perferendis pariatur assumenda reprehenderit praesentium consequatur. Esse deleniti culpa quibusdam error est.
+                    </p>
+                    <div class="customer-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                    <img src="imgs/customer-img-2.jpg" alt="">
+                    <h4 class="customer-name">George Wilson</h4>
+                </div>
+                <div class="customer">
+                    <i class="fas fa-quote-left"></i>
+                    <p class="customer-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nihil sunt nulla nostrum perferendis pariatur assumenda reprehenderit praesentium consequatur. Esse deleniti culpa quibusdam error est.
+                    </p>
+                    <div class="customer-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <img src="imgs/customer-img-3.jpg" alt="">
+                    <h4 class="customer-name">Daniella Adams</h4>
+                </div>
+            </div>
+        </div>
+         <!-- End of section two -->
     </div>
    <script src="./script.js"></script> 
 </body>
