add team memebers section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,79 @@
             </div>
         </div>
          <!-- End of section two -->
+
+         <!-- section-3 team-members -->
+        <div class="section">
+            <h2 class="section-heading">Team</h2>
+            <div class="team-wrapper">
+
+
+                <div class="team-member">
+                    <img src="imgs/team-member-1.jpg" alt="team-member-1">
+                    <h3 class="team-member-name">Adam johnson <span>(Designer)</span></h3>
+                    <ul class="team-member-skills">
+                        <li>Figma</li>
+                        <li>Ai</li>
+                        <li>Ps</li>
+                        <li>xd</li>
+                    </ul>
+                    <a href="#" class="projects-btn"></a>
+                    <div class="story-btn" title="My Story"></div>
+                </div>
+            </div>
+            <div class="story">
+                <h4 class="story-heading">
+                    <p class="story-para">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit eum consequuntur eos et fugiat culpa asperiores repellat quo molestias sunt soluta iste a expedita, voluptate ducimus laboriosam adipisci inventore molestiae similique? Enim dicta nam quae quos voluptas laboriosam necessitatibus fugit soluta asperiores deleniti expedita ex, dolor ipsa perferendis. Autem.
+                    </p>
+                </h4>
+            </div>
+
+            <div class="team-member">
+                <img src="imgs/team-member-2.jpg" alt="team-member-1">
+                <h3 class="team-member-name">Juan Carlos <span>(Front-End Developer)</span></h3>
+                <ul class="team-member-skills">
+                    <li>Html</li>
+                    <li>css</li>
+                    <li>JS</li>
+                    <li>React</li>
+                </ul>
+                <a href="#" class="projects-btn"></a>
+                <div class="story-btn" title="My Story"></div>
+            </div>
+        </div>
+        <div class="story">
+            <h4 class="story-heading">
+                <p class="story-para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit eum consequuntur eos et fugiat culpa asperiores repellat quo molestias sunt soluta iste a expedita, voluptate ducimus laboriosam adipisci inventore molestiae similique? Enim dicta nam quae quos voluptas laboriosam necessitatibus fugit soluta asperiores deleniti expedita ex, dolor ipsa perferendis. Autem.
+                </p>
+            </h4>
+        </div>
+        </div>
+
+        <div class="team-member">
+            <img src="imgs/team-member-3.jpg" alt="team-member-1">
+            <h3 class="team-member-name">Antoni Jan <span>(Back-End Developer)</span></h3>
+            <ul class="team-member-skills">
+                <li>PHP</li>
+                <li>MySQL</li>
+                <li>Laravel</li>
+                <li>Wp</li>
+            </ul>
+            <a href="#" class="projects-btn"></a>
+            <div class="story-btn" title="My Story"></div>
+        </div>
+    </div>
+    <div class="story">
+        <h4 class="story-heading">
+            <p class="story-para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit eum consequuntur eos et fugiat culpa asperiores repellat quo molestias sunt soluta iste a expedita, voluptate ducimus laboriosam adipisci inventore molestiae similique? Enim dicta nam quae quos voluptas laboriosam necessitatibus fugit soluta asperiores deleniti expedita ex, dolor ipsa perferendis. Autem.
+            </p>
+        </h4>
+    </div>
+
+
+         <!-- End of section-3 team-members -->
     </div>
    <script src="./script.js"></script> 
 </body>
